# snakemake-executor-plugin-zslurm

./: CHANGELOG.md  README.md  pyproject.toml
snakemake_executor_plugin_zslurm/: __init__.py
